                  accepting submissions
* [FIXED]   #6618 Fixed individual naming/grading to be unchecked names and grades that don't
                  require individual naming/grading are used
* [FIXED]   #6619 Fixed a bug causing a database error when a grading type other than "Point"
                  is used alongside with individual naming/grading

3.8.1 (2020-03-11)
------------------
* [FIXED] #6604 Fixed a bug checking/unchecking overwrite checkboxes when fast grading is set and a all/none bulk selectors are used
* [FIXED] #6591 Fixed a bug preventing grading submissions with 0 points in fastgrade if you previous grading was set
* [FIXED] #6604 Fixed a bug enabling submission of checks after the cut-off date

3.8.0 (2020-02-05)
------------------
* [FEATURE] #5271 Enable teachers to overwrite checks after submissions. This can be done in fastgrade and normal grade mode
* [FEATURE] #6147 Show overwritten checks differently than normal ones in all views
* [FEATURE] #6150 Include overwritten examples in activity log
* [FEATURE] #6436 Display overwritten checks using colors in .xslx and .ods and brackets in all other formats
* [FEATURE] #6364 Enable editing of checked examples without an additional button click. The checkmark preview is only displayed when no submission edit is possible
* [FIXED] #6386 Remove deprecated function leading to integration issues with block_course_overview_campus
* [FIXED] #6497 Change generation of attendance and presentation grading gradebook items to enable compatibility with new grading api
* [FIXED] #6475 Fix bug preventing export of privacy api data under certain circumstances

3.7.1 (2019-11-13)
------------------
* [FEATURE] #6276 Display a second submit button on top of the checkmark preview
* [FIXED] #6222 Fix not possible submission when submitting student is not part of a group in a course with group mode on
* [FIXED] #5890 Remove html tags showing in pdf, xls and odt exports