@@ -27,6 +27,8 @@ CHANGELOG
                   require individual naming/grading are used
 * [FIXED]   #6619 Fixed a bug causing a database error when a grading type other than "Point"
                   is used alongside with individual naming/grading
+* [FIXED]   #6649 Fixed presentationfeedback textbox not showing in grading view when
+                  grading type "none" is used
 
 3.8.1 (2020-03-11)
 ------------------
